# projekt2

./: CMakeLists.txt
Controller/: GameController.c  GameController.h  MoveLogic.c  MoveLogic.h  main.c  main_gui.c
Decks/: cards.txt  filename.txt  filename3.txt
Model/: Game.c  Game.h  card.c  card.h  columns.c  columns.h  deck.c  deck.h  filename.txt  filename2.txt  filename3.txt  foundation.c  foundation.h  main.c
View/: BoardView.c  BoardView.h  gui.c  gui.h
test/: test_deck.c
